Move forums front-end code from lms/ to common/
This is being done to prepare for more forums Jasmine tests.

--- a/common/static/js_test.yml
+++ b/common/static/js_test.yml
@@ -35,6 +35,15 @@ lib_paths:
     - js/vendor/backbone-min.js
     - js/vendor/jquery.timeago.js
     - js/vendor/URI.min.js
+    - js/vendor/split.js
+    - js/vendor/jquery.ajaxfileupload.js
+    - js/vendor/Markdown.Converter.js
+    - js/vendor/Markdown.Sanitizer.js
+    - js/vendor/Markdown.Editor.js
+    - js/vendor/jquery.autocomplete.js
+    - js/vendor/jquery.timeago.js
+    - js/vendor/jquery.tagsinput.js
+    - js/vendor/mustache.js
     - coffee/src/ajax_prefix.js
     - js/test/add_ajax_prefix.js
     - coffee/src/jquery.immediateDescendents.js
